Misc. refactoring, javadocing, etc.

--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+        <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>name.mikkoostlund.montyhall.simulation.MontySimMain</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
