--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.monty</groupId>
-  <artifactId>mini-simulation</artifactId>
+  <groupId>name.mikkoostlund</groupId>
+  <artifactId>monty-hall-simulation</artifactId>
   <version>0-SNAPSHOT</version>
   <name>Monty Hall simulation</name>
   <description>A simulation of the Monty Hall show</description>
@@ -88,11 +88,6 @@
           	<goals>
               <goal>report</goal>
           	</goals>
-            <configuration>
-          	  <excludes>
-                <exclude>com/monty/minisimulation/MontyMain.class</exclude>
-              </excludes>
-            </configuration>
           </execution>
 		  <execution>
             <id>prepare-agent-integration</id>
@@ -107,11 +102,6 @@
           	<goals>
               <goal>report-integration</goal>
           	</goals>
-            <configuration>
-          	  <excludes>
-                <exclude>com/monty/minisimulation/MontyMain.class</exclude>
-              </excludes>
-            </configuration>
           </execution>
           <execution>
             <id>check</id>
@@ -120,9 +110,6 @@
               <goal>check</goal>
             </goals>
             <configuration>
-          	  <excludes>
-                <exclude>com/monty/minisimulation/MontyMain.class</exclude>
-              </excludes>
               <rules>
                 <rule>
                   <element>BUNDLE</element>
@@ -148,9 +135,6 @@
             <dataFile>
               ${project.build.directory}/jacoco-it.exec
             </dataFile>
-          	  <excludes>
-                <exclude>com/monty/minisimulation/MontyMain.class</exclude>
-              </excludes>
               <rules>
                 <rule>
                   <element>BUNDLE</element>
