--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,9 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.7.2.201409121644</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
         <executions>
 		  <execution>
             <id>prepare-agent</id>
