--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.2.201409121644</version>
+        </plugin>
+      </plugins>    
+    </pluginManagement>
+
     <plugins>
 
       <plugin>
@@ -74,10 +84,6 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.2.201409121644</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
         <executions>
 		  <execution>
             <id>prepare-agent</id>
@@ -201,5 +207,22 @@
       </plugin>
     </plugins>
   </reporting>
-  
+
+  <profiles>
+    <profile>
+      <id>teamcity</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
