--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,28 @@
               <skip>true</skip>
             </configuration>
           </plugin>
+
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.5.3</version>
+            <configuration>
+              <descriptors>
+                <descriptor>src/main/assembly/site-zip.xml</descriptor>
+              </descriptors>
+            </configuration>
+            <executions>
+              <execution>
+                <id>make-teamcity-maven-site-zip</id>
+                <phase>site</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <finalName>teamcity-maven-site</finalName>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
