--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,26 @@
           </execution>
 		</executions>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.5.3</version>
+        <executions>
+          <execution>
+            <id>default-cli</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>${assembly.descriptor}</descriptor>
+              </descriptors>
+              <finalName>${assembly.finalName}</finalName>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
 
